# icoutils

./: AUTHORS  ChangeLog  MANIFEST.sources  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  icoutils.spec.in
common/: Makefile.am  Makefile.in  llist.c
data/resscripts/: example  win98_dlls  win98_dlls_unfinished  win98_executables  win98_moricons  win98_pifmgr  win98_shell32
extresso/: Makefile.am  Makefile.in  extresso  extresso.1  extresso.in  genresscript  genresscript.1  genresscript.in
icotool/: Makefile.am  Makefile.in  create.c  extract.c  icotool.1  icotool.h  main.c  palette.c  win32.h
lib/: Makefile.am  Makefile.in
m4/: gnulib-comp.m4
po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  icoutils.pot
wrestool/: Makefile.am  Makefile.in  extract.c  main.c  restable.c  wrestool.1  wrestool.h
